# Cpp-image-and-video-processing-pipeline

./: .gitignore  CMakeLists.txt  README.md  live_video.cpp  main.cpp  mkdocs.yml  setup_deps.sh  vision_filters.cpp  vision_filters.hpp
